# rationale

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SURVEY.md  pyproject.toml  rationale-architecture.md
.claude-plugin/: marketplace.json  plugin.json
commands/: rationale-check.md  rationale-export.md  rationale-graph.md  rationale-summary.md  why.md
hooks/: hooks.json
rationale/: __init__.py  anchoring.py  capture.py  cli.py  distiller.py  export.py  graph.py  mcp_server.py  models.py  query.py  rollup.py  staleness.py  storage.py  symbols.py
tests/: conftest.py  test_anchoring.py  test_capture.py  test_cli.py  test_cross_cwd.py  test_distiller.py  test_export.py  test_global_hook.py  test_graph.py  test_hook_schema.py  test_mcp_server.py  test_models.py  test_plugin_manifests.py  test_query.py  test_robustness.py  test_rollup.py  test_staleness.py  test_storage.py  test_symbols.py  test_windows_paths.py
